--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -54,7 +54,7 @@
 		 Multiple valid text domains can be provided as a comma-delimited list. -->
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<property name="text_domain" type="array" value="_s"/>
+			<property name="text_domain" type="array" value="_s,design_ict_site"/>
 		</properties>
 	</rule>
 
@@ -90,7 +90,6 @@
 		</properties>
 	</rule>
 
-
 	<!--
 	#############################################################################
 	USE THE PHPCompatibility RULESET
@@ -112,7 +111,6 @@
 		<exclude name="PHPCompatibility.PHP.NewInterfaces.jsonserializableFound"/>
 		<exclude name="Squiz.Commenting.FunctionComment"/>
 		<exclude name="Squiz.Commenting.VariableComment"/>
-		<exclude name="ControlStructure.YodaConditions"/>
 	</rule>
 
 </ruleset>
