New feature: Added newsltter section in HP

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -114,5 +114,7 @@
 	</rule>
 
 	<!-- Custom rules -->
+	<!-- Disallow Yoda conditions in your codebase. -->
+	<rule ref="Generic.ControlStructures.DisallowYodaConditions"/>
 
 </ruleset>
