Modifications: Fixed CT fields

--- a/SETUP/ACF_Custom_Fields/acf-export-project.json
+++ b/SETUP/ACF_Custom_Fields/acf-export-project.json
@@ -298,7 +298,7 @@
                 {
                     "param": "post_type",
                     "operator": "==",
-                    "value": "project"
+                    "value": "dis-project"
                 }
             ]
         ],
