New features: Added project a section in HP

--- a/SETUP/ACF_Custom_Fields/acf-export-project.json
+++ b/SETUP/ACF_Custom_Fields/acf-export-project.json
@@ -194,7 +194,7 @@
                     "id": ""
                 },
                 "message": "",
-                "default_value": 0,
+                "default_value": 1,
                 "allow_in_bindings": 0,
                 "ui": 0,
                 "ui_on_text": "",
@@ -247,7 +247,7 @@
                     "id": ""
                 },
                 "post_type": [
-                    "office"
+                    "dis-office"
                 ],
                 "post_status": "",
                 "taxonomy": "",
