Bug-fixing: Fixed ct relationships - v3

--- a/SETUP/ACF_Custom_Fields/acf-export-project.json
+++ b/SETUP/ACF_Custom_Fields/acf-export-project.json
@@ -238,9 +238,9 @@
                     "id": ""
                 },
                 "post_type": [
-                    "event",
                     "post",
-                    "page"
+                    "page",
+                    "dis-event"
                 ],
                 "post_status": "",
                 "taxonomy": "",
@@ -300,7 +300,7 @@
                     "id": ""
                 },
                 "post_type": [
-                    "person"
+                    "dis-person"
                 ],
                 "post_status": "",
                 "taxonomy": "",
