--- a/SETUP/ACF_Custom_Fields/acf-export-project.json
+++ b/SETUP/ACF_Custom_Fields/acf-export-project.json
@@ -8,7 +8,7 @@
                 "label": "Short description",
                 "name": "short_description",
                 "aria-label": "",
-                "type": "wysiwyg",
+                "type": "text",
                 "instructions": "",
                 "required": 0,
                 "conditional_logic": 0,
@@ -18,11 +18,11 @@
                     "id": ""
                 },
                 "default_value": "",
-                "allow_in_bindings": 0,
-                "tabs": "all",
-                "toolbar": "full",
-                "media_upload": 1,
-                "delay": 0
+                "maxlength": "",
+                "allow_in_bindings": 1,
+                "placeholder": "",
+                "prepend": "",
+                "append": ""
             },
             {
                 "key": "field_681b6c361d273",
