Changed the logo of the app

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -65,4 +65,4 @@ platforms:
 releaseDate: '2025-03-07'
 softwareType: addon
 url: 'https://github.com/ScuolaNormaleSuperiore/design-ictsite-wp-theme'
-logo: assets/img/logo_sns.png
+logo: assets/img/logo_ict_site.png
