--- a/publiccode.yml
+++ b/publiccode.yml
@@ -4,7 +4,7 @@
 
 publiccodeYmlVersion: '0.4.0'
 applicationSuite: WordPress
-softwareVersion: 0.0.3
+softwareVersion: DEV-0.0.4
 categories:
   - website-builder
 description:
