--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "design-ictsite-wp-theme",
-  "version": "0.0.2",
+  "version": "DEV-0.0.5",
   "description": "WordPress theme for ICT sites",
   "main": "index.js",
   "scripts": {
